--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy birthday</title>
-    <link rel="stylesheet" href="style.css">
     <style>
     @import url(https://fonts.googleapis.com/css?family=Damion);
     * {
@@ -646,7 +645,7 @@
             <div class="svg">
               <svg id="Layer_1" width="800">
                 <text x="-10" y="50" fill="#FF99CC" stroke="#000000" font-size="48px">
-                  HAPPY BIRTHDAY TO YOU :3. I hope you have a great day!
+                  HAPPY BIRTHDAY TO YOU :3.
                 </text>
               </svg>
               <p id="demo"></p>
@@ -704,10 +703,10 @@
           </div>
         </div>
       </div>
-
 <script>
+$(document).ready(function(){
   var i = 0;
-  var txt = "HAPPY BIRTHDAY TO YOU :3. I hope you have a great day!"; // Nội dung gõ từng chữ
+  var txt = HAPPY BIRTHDAY TO YOU :3. ; // Nội dung gõ từng chữ
   var speed = 100;
 
   function type1() {
@@ -874,6 +873,7 @@
   $('.sa').click(function () {
     window.location.reload();
   });
+});
 </script>
 </body>
 </html>
