--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
 <script>
 $(document).ready(function(){
   var i = 0;
-  var txt = HAPPY BIRTHDAY TO YOU :3. ; // Nội dung gõ từng chữ
+  var txt = HAPPY BIRTHDAY TO YOU . ; 
   var speed = 100;
 
   function type1() {
